fix(TableGroup): prevent content border overflow

--- a/src/containers/Storage/TableGroup/TableGroup.scss
+++ b/src/containers/Storage/TableGroup/TableGroup.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
 
-    width: 100%;
+    width: max-content;
+    min-width: 100%;
     margin-bottom: 20px;
 
     border: 1px solid var(--g-color-line-generic);
